# RoboticArm

./: .gitignore  CHANGELOG.md  PROGRESS.md  README.md  camera_mount.scad  requirements.txt  visualize_robot.py
docker/noetic/: Dockerfile  HARDWARE.md  elfin_drivers.yaml.example  run.sh
elfin_noetic_ws/: .dockerignore  Dockerfile
elfin_noetic_ws/src/elfin_s_robot/: README.md  README_cn.md
elfin_noetic_ws/src/elfin_s_robot/elfin_description/urdf/: S30.urdf.xacro
elfin_noetic_ws/src/elfin_s_robot/elfin_ethercat_driver/: CMakeLists.txt
elfin_noetic_ws/src/elfin_s_robot/elfin_gazebo/launch/: elfin_s20_gazebo_moveit.launch  elfin_s30_empty_world.launch
elfin_noetic_ws/src/elfin_s_robot/elfin_robot/: package.xml
elfin_noetic_ws/src/elfin_s_robot/elfin_robot_bringup/config/: elfin_drivers.yaml
elfin_noetic_ws/src/elfin_s_robot/elfin_s20_moveit_config/launch/: move_group.launch  moveit_planning_execution.launch
elfin_noetic_ws/src/elfin_s_robot/elfin_s30_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
elfin_noetic_ws/src/elfin_s_robot/elfin_s30_moveit_config/config/: S30.srdf
elfin_noetic_ws/src/luggage_bringup/: CMakeLists.txt  README.md  package.xml
elfin_noetic_ws/src/luggage_bringup/config/: camera_view.rviz  pose_tune_moveit.rviz
elfin_noetic_ws/src/luggage_bringup/launch/: active_loading.launch  camera_mount_tune.launch  camera_view.launch  inspect_container.launch  moveit_for_camera_tune.launch  moveit_with_camera.launch  pose_tune.launch  pose_tune_moveit.launch  reset_observe.launch  sim_full.launch  sim_skeleton.launch
elfin_noetic_ws/src/luggage_bringup/scripts/: cam_mount_joint_state_merger.py  camera_mount_tune_gui.py  camera_mount_tune_init.py  container_tf_publisher.py  export_observe_joints.py  mount_config_utils.py  orchestrator_node.py  pose_tune_gui.py  reset_observe_client.py  sync_camera_mount_config.py  verify_camera_mount_config.py
elfin_noetic_ws/src/luggage_description/: CMakeLists.txt  package.xml
elfin_noetic_ws/src/luggage_description/config/: S20_with_camera.srdf  box_catalog.yaml.example  camera_mount_origin.xacro  container.yaml.example  exploration.yaml.example  realsense_d435.yaml  realsense_d435_mount.yaml.example  robot_poses.yaml.example  suitcase.yaml.example  vacuum_gripper.yaml.example
elfin_noetic_ws/src/luggage_description/launch/: load_description.launch
elfin_noetic_ws/src/luggage_description/scripts/: container_config_utils.py  description_params_node.py
elfin_noetic_ws/src/luggage_description/urdf/: camera_mount_tune_chain.xacro  elfin_s20_with_camera.urdf.xacro  elfin_s20_with_camera_tune.urdf.xacro  realsense_d435.urdf.xacro  vacuum_gripper.urdf.xacro
elfin_noetic_ws/src/luggage_gazebo/: CMakeLists.txt  package.xml
elfin_noetic_ws/src/luggage_gazebo/launch/: sim_world.launch  sim_world_tune.launch  spawn_luggage_scene.launch
elfin_noetic_ws/src/luggage_gazebo/models/airport_container/: model.config  model.sdf
elfin_noetic_ws/src/luggage_gazebo/models/airport_container_measured/: model.config  model.sdf
elfin_noetic_ws/src/luggage_gazebo/models/airport_container_measured/meshes/: container_collision.stl  container_visual.stl
elfin_noetic_ws/src/luggage_gazebo/models/suitcase_carryon/: model.config  model.sdf
elfin_noetic_ws/src/luggage_gazebo/models/suitcase_large/: model.config  model.sdf
elfin_noetic_ws/src/luggage_gazebo/models/suitcase_standard/: model.config  model.sdf
elfin_noetic_ws/src/luggage_gazebo/scripts/: clear_gazebo_models.py  pickup_box_spawner_node.py
elfin_noetic_ws/src/luggage_gazebo/worlds/: airport_loading.world
elfin_noetic_ws/src/luggage_msgs/: CMakeLists.txt  package.xml
elfin_noetic_ws/src/luggage_msgs/msg/: DetectedLuggage.msg  LoadTaskStatus.msg  MotionSegment.msg  SlotSpec.msg
elfin_noetic_ws/src/luggage_msgs/srv/: AddPlacedBox.srv  AimCameraAtContainer.srv  BuildMotionSequence.srv  ComputePlacement.srv  DetectLuggage.srv  GetCargoMapStats.srv  GetCurrentBox.srv  GetNextSlot.srv  GoToJointValues.srv  GoToRobotPose.srv  InspectContainer.srv  IntegrateCargoView.srv  PlanMotion.srv  PlanNextCargoView.srv  ResetCargoMap.srv
elfin_noetic_ws/src/luggage_packing/: CMakeLists.txt  package.xml
elfin_noetic_ws/src/luggage_packing/scripts/: bin_packer_node.py
elfin_noetic_ws/src/luggage_perception/: CMakeLists.txt  package.xml
elfin_noetic_ws/src/luggage_perception/scripts/: cargo_volume_mapper.py  cargo_volume_mapper_node.py  container_inspector_node.py  luggage_detector_node.py
elfin_noetic_ws/src/luggage_planning/: CMakeLists.txt  package.xml
elfin_noetic_ws/src/luggage_planning/scripts/: cargo_exploration_planner_node.py  cargo_nbv_planner.py  container_aim_utils.py  motion_planner_node.py  scene_manager_node.py  vacuum_simulator_node.py  waypoint_generator.py  waypoint_generator_node.py
elfin_noetic_ws/src/pointcloud/: .gitignore  README.md  requirements.txt
elfin_noetic_ws/src/pointcloud/config/: cloud_completion.yaml  cloud_completion.yaml.example  extract_cargo.yaml.example  measure_cargo.yaml.example  surface_visual.yaml  surface_visual.yaml.example
elfin_noetic_ws/src/pointcloud/scripts/: build_surface_visual.py  cargo_cad_model.py  cargo_cloud_completion.py  cargo_features.py  cargo_io.py  cargo_mesh.py  cargo_mesh_opening.py  cargo_mesh_qa.py  cargo_parametric_fit.py  cargo_plane_segment.py  cargo_preprocess.py  cargo_surface_mesh.py  cloudcompare_batch_crop.sh  complete_cargo_cloud.py  convert_cloudcompare_bin.sh  extract_cargo_from_room.py  generate_gazebo_model.py  make_measured_cargo_las.py  make_synthetic_room_las.py  measure_cargo_from_las.py
paper/: paper1.md  paper2.md
ros2_ws/src/elfin_trajectory_executor/: Dockerfile  package.xml  setup.cfg  setup.py
ros2_ws/src/elfin_trajectory_executor/config/: executor.yaml
ros2_ws/src/elfin_trajectory_executor/elfin_trajectory_executor/: __init__.py  huayan_interface.py  sim_interface.py  trajectory_executor_node.py
ros2_ws/src/elfin_trajectory_executor/launch/: real.launch.py  sim.launch.py
(+16 files in other folders)
