<?xml version="1.0"?>
<package format="2">
  <name>luggage_bringup</name>
  <version>0.0.1</version>
  <description>Top-level launch and orchestrator for luggage loading simulation.</description>
  <maintainer email="dev@todo.todo">RobotArm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>luggage_msgs</exec_depend>
  <exec_depend>luggage_description</exec_depend>
  <exec_depend>luggage_gazebo</exec_depend>
  <exec_depend>luggage_perception</exec_depend>
  <exec_depend>luggage_packing</exec_depend>
  <exec_depend>luggage_planning</exec_depend>
</package>
