<?xml version="1.0"?>
<package format="2">
  <name>luggage_description</name>
  <version>0.0.1</version>
  <description>URDF and YAML configs for luggage loading sim.</description>
  <maintainer email="dev@todo.todo">RobotArm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
