<?xml version="1.0"?>
<package format="2">
  <name>luggage_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo worlds and models for luggage loading simulation.</description>
  <maintainer email="dev@todo.todo">RobotArm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>elfin_gazebo</exec_depend>
  <exec_depend>luggage_description</exec_depend>
  <exec_depend>luggage_msgs</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
