<?xml version="1.0"?>
<package format="2">
  <name>luggage_msgs</name>
  <version>0.0.1</version>
  <description>Messages and services for airport luggage loading simulation.</description>
  <maintainer email="dev@todo.todo">RobotArm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
