<?xml version="1.0"?>
<package format="2">
  <name>luggage_packing</name>
  <version>0.0.1</version>
  <description>Bin packing for container luggage placement.</description>
  <maintainer email="dev@todo.todo">RobotArm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>luggage_msgs</exec_depend>
  <exec_depend>luggage_description</exec_depend>
</package>
