<?xml version="1.0"?>
<package format="2">
  <name>luggage_planning</name>
  <version>0.0.1</version>
  <description>Scene, waypoint, motion planning and vacuum sim for luggage loading.</description>
  <maintainer email="dev@todo.todo">RobotArm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>luggage_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>luggage_description</exec_depend>
</package>
